# Chirurgien

./: .gitignore  CHANGELOG  FORMAT-DEFINITION-XML.md  FORMAT-TEMPLATE.xml  README.md  io.github.leonardschardijn.Chirurgien.json  meson.build
chirurgien/: chirurgien-actions-analyzer.h  chirurgien-actions.c  chirurgien-actions.h  chirurgien-analyzer-info-dialog.c  chirurgien-analyzer-info-dialog.h  chirurgien-analyzer-view.c  chirurgien-analyzer-view.h  chirurgien-application.c  chirurgien-application.h  chirurgien-colors.h  chirurgien-editor.c  chirurgien-editor.h  chirurgien-formats-dialog.c  chirurgien-formats-dialog.h  chirurgien-globals.c  chirurgien-globals.h  chirurgien-navigation-button.c  chirurgien-navigation-button.h  chirurgien-preferences-dialog.c  chirurgien-preferences-dialog.h  chirurgien-utils.c  chirurgien-utils.h  chirurgien-view-tab.c  chirurgien-view-tab.h  chirurgien-view.c  chirurgien-view.h  chirurgien-window.c  chirurgien-window.h  main.c  meson.build
chirurgien/analyzers/: analyzer-utils.c  analyzer-utils.h  chirurgien-analyzer-file.h  chirurgien-analyzer.c  chirurgien-analyzer.h  meson.build
chirurgien/analyzers/cpio/: chirurgien-analyze-cpio.h  cpio-analyzer.c  cpio-analyzer.h
chirurgien/analyzers/elf/: chirurgien-analyze-elf.h  elf-analyzer.c  elf-analyzer.h  elf-program-header.c  elf-section-header.c
chirurgien/analyzers/gif/: chirurgien-analyze-gif.h  gif-analyzer.c  gif-analyzer.h  gif-application-ext-block.c  gif-comment-ext-block.c  gif-graphic-control-ext-block.c  gif-image-descriptor-block.c  gif-logical-screen-descriptor-block.c  gif-plain-text-ext-block.c
chirurgien/analyzers/jpeg/: chirurgien-analyze-jpeg.h  jpeg-analyzer.c  jpeg-analyzer.h  jpeg-app0-marker.c  jpeg-app1-marker.c  jpeg-app2-marker.c  jpeg-com-marker.c  jpeg-dac-marker.c  jpeg-dht-marker.c  jpeg-dnl-marker.c  jpeg-dqt-marker.c  jpeg-dri-dnl-marker.c  jpeg-dri-marker.c  jpeg-sofn-marker.c  jpeg-sos-marker.c
chirurgien/analyzers/png/: chirurgien-analyze-png.h  png-analyzer.c  png-analyzer.h  png-bkgd-chunk.c  png-chrm-chunk.c  png-gama-chunk.c  png-hist-chunk.c  png-iccp-chunk.c  png-idat-chunk.c  png-ihdr-chunk.c  png-itxt-chunk.c  png-phys-chunk.c  png-plte-chunk.c  png-sbit-chunk.c  png-splt-chunk.c  png-srgb-chunk.c  png-text-chunk.c  png-time-chunk.c  png-trns-chunk.c  png-ztxt-chunk.c  puff.c  puff.h
chirurgien/analyzers/tar/: chirurgien-analyze-tar.h  tar-analyzer.c  tar-analyzer.h
chirurgien/analyzers/tiff/: chirurgien-analyze-exif.h  chirurgien-analyze-tiff.h  exif-analyzer.c  exif-analyzer.h  exif-gpsinfo-analyzer.c  exif-gpsinfo-analyzer.h  tiff-analyzer.c  tiff-analyzer.h  tiff-ascii-tag.c  tiff-byte-tag.c  tiff-byte-undefined-tag.c  tiff-long-tag.c  tiff-rational-tag.c  tiff-short-tag.c  tiff-shortlong-tag.c  tiff-undefined-tag.c
chirurgien/formats/: chirurgien-formats-file.h  chirurgien-formats.c  chirurgien-formats.h  chirurgien-types.h  format-utils.c  format-utils.h  meson.build
chirurgien/formats/cpio/: chirurgien-cpio.h  cpio-format.c  cpio-format.h
chirurgien/formats/elf/: chirurgien-elf.h  elf-format.c  elf-format.h  elf-program-header.c  elf-section-header.c
chirurgien/formats/gif/: chirurgien-gif.h  gif-application-ext-block.c  gif-comment-ext-block.c  gif-format.c  gif-format.h  gif-graphic-control-ext-block.c  gif-image-descriptor-block.c  gif-logical-screen-descriptor-block.c  gif-plain-text-ext-block.c
chirurgien/formats/jpeg/: chirurgien-jpeg.h  jpeg-app0-marker.c  jpeg-app1-marker.c  jpeg-app2-marker.c  jpeg-com-marker.c  jpeg-dac-marker.c  jpeg-dht-marker.c  jpeg-dqt-marker.c  jpeg-dri-dnl-marker.c  jpeg-format.c  jpeg-format.h  jpeg-sofn-marker.c  jpeg-sos-marker.c
chirurgien/formats/pe/: chirurgien-pe.h  pe-data-directories.c  pe-format.c  pe-format.h  pe-section-table.c
chirurgien/formats/png/: chirurgien-png.h  png-bkgd-chunk.c  png-chrm-chunk.c  png-format.c  png-format.h  png-gama-chunk.c  png-hist-chunk.c  png-iccp-chunk.c  png-idat-chunk.c  png-ihdr-chunk.c  png-itxt-chunk.c  png-phys-chunk.c  png-plte-chunk.c  png-sbit-chunk.c  png-splt-chunk.c  png-srgb-chunk.c  png-text-chunk.c  png-time-chunk.c  png-trns-chunk.c  png-zlib-deflate.c  png-ztxt-chunk.c
chirurgien/formats/processor/: chirurgien-processor.h  process-block-step.c  process-exec-step.c  process-field-step.c  process-loop-step.c  process-match-step.c  process-print-step.c  process-selection-step.c  processor-file-private.h  processor-file.c  processor-file.h  processor-utils.c  processor-utils.h  processor.c  processor.h
chirurgien/formats/tar/: chirurgien-tar.h  tar-format.c  tar-format.h
chirurgien/formats/tiff/: chirurgien-exif.h  chirurgien-tiff.h  exif-format.c  exif-format.h  exif-gpsinfo-format.c  exif-gpsinfo-format.h  tiff-ascii-tag.c  tiff-byte-undefined-tag.c  tiff-format.c  tiff-format.h  tiff-long-tag.c  tiff-rational-tag.c  tiff-short-tag.c
chirurgien/formats/validator/: chirurgien-validator.h  validate-block-defs.c  validate-colors.c  validate-endianness.c  validate-field-defs.c  validate-magic.c  validate-root.c  validate-run.c  validator-utils.c  validator-utils.h  validator.c  validator.h
chirurgien/formats/webp/: chirurgien-webp.h  webp-alph-chunk.c  webp-anim-chunk.c  webp-anmf-chunk.c  webp-format.c  webp-format.h  webp-generic-chunk.c  webp-vp8-chunk.c  webp-vp8l-chunk.c  webp-vp8x-chunk.c
chirurgien/resources/: chirurgien.gresource.xml  meson.build
chirurgien/resources/analyzer-info/: cpio-tab.ui  elf-tab.ui  gif-tab.ui  intro-tab.ui  jpeg-tab.ui  png-tab.ui  tar-tab.ui  tiff-tab.ui
chirurgien/resources/format-definitions/: cpio-format.xml  elf-format.xml  gif-format.xml  jpeg-format.xml  pe-format.xml  png-format.xml  tar-format.xml  tiff-format.xml  webp-format.xml
chirurgien/resources/formats/: cpio-tab.ui  elf-tab.ui  gif-tab.ui  intro-tab.ui  jpeg-tab.ui  pe-tab.ui  png-tab.ui  tar-tab.ui  tiff-tab.ui  webp-tab.ui
chirurgien/resources/menus/: hamburger-menu.ui  menu-csd.ui  menu-wmd.ui  wmd-menu.ui
chirurgien/resources/ui/: chirurgien-analyzer-info-dialog.ui  chirurgien-analyzer-view.ui  (+6 more)
po/: LINGUAS  (+2 more)
(+7 files in other folders)
