analyzers_include_dir = include_directories('.')

chirurgien_sources += [
  'analyzers/chirurgien-analyzer.c',
  'analyzers/analyzer-utils.c'
]

chirurgien_sources += [
  'analyzers/jpeg/jpeg-analyzer.c',
  'analyzers/jpeg/jpeg-app0-marker.c',
  'analyzers/jpeg/jpeg-app2-marker.c',
  'analyzers/jpeg/jpeg-dqt-marker.c',
  'analyzers/jpeg/jpeg-dht-marker.c',
  'analyzers/jpeg/jpeg-dac-marker.c',
  'analyzers/jpeg/jpeg-sofn-marker.c',
  'analyzers/jpeg/jpeg-dri-marker.c',
  'analyzers/jpeg/jpeg-sos-marker.c',
  'analyzers/jpeg/jpeg-dnl-marker.c',
  'analyzers/jpeg/jpeg-com-marker.c'
]

chirurgien_sources += [
  'analyzers/png/png-analyzer.c',
  'analyzers/png/png-ihdr-chunk.c',
  'analyzers/png/png-plte-chunk.c',
  'analyzers/png/png-idat-chunk.c',
  'analyzers/png/png-trns-chunk.c',
  'analyzers/png/png-chrm-chunk.c',
  'analyzers/png/png-gama-chunk.c',
  'analyzers/png/png-iccp-chunk.c',
  'analyzers/png/png-sbit-chunk.c',
  'analyzers/png/png-srgb-chunk.c',
  'analyzers/png/png-text-chunk.c',
  'analyzers/png/png-ztxt-chunk.c',
  'analyzers/png/png-itxt-chunk.c',
  'analyzers/png/png-bkgd-chunk.c',
  'analyzers/png/png-hist-chunk.c',
  'analyzers/png/png-phys-chunk.c',
  'analyzers/png/png-splt-chunk.c',
  'analyzers/png/png-time-chunk.c',
  'analyzers/png/puff.c'
]

