formats_include_dir = include_directories('.')

chirurgien_sources += [
  'formats/format-utils.c',
  'formats/chirurgien-formats.c'
]

chirurgien_sources += [
  'formats/cpio/cpio-format.c'
]

chirurgien_sources += [
  'formats/elf/elf-format.c',
  'formats/elf/elf-program-header.c',
  'formats/elf/elf-section-header.c'
]

chirurgien_sources += [
  'formats/gif/gif-format.c',
  'formats/gif/gif-logical-screen-descriptor-block.c',
  'formats/gif/gif-image-descriptor-block.c',
  'formats/gif/gif-application-ext-block.c',
  'formats/gif/gif-comment-ext-block.c',
  'formats/gif/gif-graphic-control-ext-block.c',
  'formats/gif/gif-plain-text-ext-block.c'
]

chirurgien_sources += [
  'formats/jpeg/jpeg-format.c',
  'formats/jpeg/jpeg-app0-marker.c',
  'formats/jpeg/jpeg-app1-marker.c',
  'formats/jpeg/jpeg-app2-marker.c',
  'formats/jpeg/jpeg-dqt-marker.c',
  'formats/jpeg/jpeg-dht-marker.c',
  'formats/jpeg/jpeg-dac-marker.c',
  'formats/jpeg/jpeg-sofn-marker.c',
  'formats/jpeg/jpeg-dri-dnl-marker.c',
  'formats/jpeg/jpeg-sos-marker.c',
  'formats/jpeg/jpeg-com-marker.c'
]

chirurgien_sources += [
  'formats/pe/pe-format.c',
  'formats/pe/pe-data-directories.c',
  'formats/pe/pe-section-table.c'
]

chirurgien_sources += [
  'formats/png/png-format.c',
  'formats/png/png-ihdr-chunk.c',
  'formats/png/png-plte-chunk.c',
  'formats/png/png-idat-chunk.c',
  'formats/png/png-trns-chunk.c',
  'formats/png/png-chrm-chunk.c',
  'formats/png/png-gama-chunk.c',
  'formats/png/png-iccp-chunk.c',
  'formats/png/png-sbit-chunk.c',
  'formats/png/png-srgb-chunk.c',
  'formats/png/png-text-chunk.c',
  'formats/png/png-ztxt-chunk.c',
  'formats/png/png-itxt-chunk.c',
  'formats/png/png-bkgd-chunk.c',
  'formats/png/png-hist-chunk.c',
  'formats/png/png-phys-chunk.c',
  'formats/png/png-splt-chunk.c',
  'formats/png/png-time-chunk.c',
  'formats/png/png-zlib-deflate.c'
]

chirurgien_sources += [
  'formats/tar/tar-format.c'
]

chirurgien_sources += [
  'formats/tiff/tiff-format.c',
  'formats/tiff/exif-format.c',
  'formats/tiff/exif-gpsinfo-format.c',
  'formats/tiff/tiff-byte-undefined-tag.c',
  'formats/tiff/tiff-ascii-tag.c',
  'formats/tiff/tiff-short-tag.c',
  'formats/tiff/tiff-long-tag.c',
  'formats/tiff/tiff-rational-tag.c'
]
