formats_include_dir = include_directories('.')

chirurgien_sources += [
  'formats/chirurgien-formats.c',
]

# Format validator

chirurgien_sources += [
  'formats/validator/validator.c',
  'formats/validator/validator-utils.c',
  'formats/validator/validate-root.c',
  'formats/validator/validate-endianness.c',
  'formats/validator/validate-magic.c',
  'formats/validator/validate-colors.c',
  'formats/validator/validate-run.c',
  'formats/validator/validate-block-defs.c',
  'formats/validator/validate-field-defs.c',
]

# Format processor

chirurgien_sources += [
  'formats/processor/processor.c',
  'formats/processor/processor-file.c',
  'formats/processor/processor-utils.c',
  'formats/processor/process-field-step.c',
  'formats/processor/process-match-step.c',
  'formats/processor/process-loop-step.c',
  'formats/processor/process-selection-step.c',
  'formats/processor/process-print-step.c',
  'formats/processor/process-exec-step.c',
  'formats/processor/process-block-step.c'
]
